translation for about

--- a/translation/de.json
+++ b/translation/de.json
@@ -30,5 +30,8 @@
   },
   "friendReviews": {
   "title": "Reviews von Freunden"
+  },
+  "about": {
+    "summary": "Dieses Portfolio ist mit Fresh und Deno erstellt und probiert einen Einblick über mich zu geben."
   }
 }
