add contact form

--- a/translation/en.json
+++ b/translation/en.json
@@ -54,7 +54,11 @@
     "title": "Friend Reviews"
   },
   "contact": {
-    "title": "Contact"
+    "title": "Contact",
+    "email": "Email",
+    "message": "Message",
+    "thankYou": "Thank you for reaching out!",
+    "messageReceived": "I'll get back to you as soon as possible."
   },
   "about": {
     "summary": "This portfolio is created with Fresh and Deno and tries to give an insight about me."
