--- a/translation/de.json
+++ b/translation/de.json
@@ -54,7 +54,11 @@
   "title": "Reviews von Freunden"
   },
   "contact": {
-    "title": "Kontakt"
+    "title": "Kontakt",
+    "email": "Email",
+    "message": "Nachricht",
+    "thankYou": "Danke!",
+    "messageReceived": "Ich habe die Nachricht erhalten und melde mich zeitnah."
   },
   "about": {
     "summary": "Dieses Portfolio ist mit Fresh und Deno erstellt und probiert einen Einblick über mich zu geben."
